@@ -14,6 +14,8 @@ public class PartidoParseControleTeste extends TemplateTeste {
 	
 	public static final int SIGLA = 0;
 	public static final int NUMERO = 1;
+	public static final int DEFERIMENTO = 2;
+	public static final int NOME = 3;
 	
 	private String campo[];
 	private PartidoDAO partidoDAO;
@@ -22,7 +24,7 @@ public class PartidoParseControleTeste extends TemplateTeste {
 
 	@Override
 	public void beforeTest() throws Exception {
-		this.campo = new String[2];
+		this.campo = new String[4];
 		this.partidoDAO = new PartidoDAO();
 		this.partidoIndicesParse = new PartidoIndicesParse();
 		this.partidoParseControle = new PartidoParseControle(this.partidoIndicesParse);
@@ -38,35 +40,44 @@ public class PartidoParseControleTeste extends TemplateTeste {
 	
 	@Test
 	public void cadastrarPartido() throws Exception {
+		
 		this.partidoParseControle.addInstancia(campo);
 		this.partidoParseControle.cadastrarInstancias();
 		this.partidoParseControle.resetar();
 		
-		Partido partidoCadastrado = this.partidoDAO.getListaPartidos().getFirst();
+		Partido partidoCadastrado = this.partidoDAO.getLista().get(0);
 				
 		Assert.assertEquals(this.campo[SIGLA], partidoCadastrado.getSigla());
 		Assert.assertEquals(this.campo[NUMERO], partidoCadastrado.getNumero());
+		Assert.assertEquals(this.campo[DEFERIMENTO], partidoCadastrado.getDeferimento());
+		Assert.assertEquals(this.campo[NOME], partidoCadastrado.getNome());
 	}
 	
 	@Test
 	public void naoDeveCadastrarDoisPartidosIguais() throws Exception {
+		
 		this.partidoParseControle.addInstancia(campo);
 		this.partidoParseControle.addInstancia(campo);
 		this.partidoParseControle.cadastrarInstancias();
 		this.partidoParseControle.resetar();
 		
-		int numeroPartidos = this.partidoDAO.getListaPartidos().size();
+		int numeroPartidosCadastrados = this.partidoDAO.getLista().size();
 				
-		Assert.assertEquals(1, numeroPartidos);
+		Assert.assertEquals(1, numeroPartidosCadastrados);
 	}
 	
 	private void iniciarIndices() {
+		
 		this.partidoIndicesParse.setIndiceSigla(SIGLA);
 		this.partidoIndicesParse.setIndiceNumero(NUMERO);
+		this.partidoIndicesParse.setIndiceDeferimento(DEFERIMENTO);
+		this.partidoIndicesParse.setIndiceNome(NOME);
 	}
 	
 	private void iniciarCampos() {
-		this.campo[SIGLA] = "AB";
-		this.campo[NUMERO] = "1";
+		this.campo[SIGLA] = "DEM";
+		this.campo[NUMERO] = "25";
+		this.campo[DEFERIMENTO] = "11.9.1986";
+		this.campo[NOME] = "DEMOCRATAS";
 	}
 }
